# shrine

./: .envrc  .gitignore  README.md  conductor.yaml  pyproject.toml
cap-demo/: CMakeLists.txt  ESP32_ADC_CLOCKING.md  IQ_DEMOD_STATUS.md  MCP3201_INTEGRATION.md  platformio.ini  plot_iq.py  sdkconfig.defaults
dc-gsr/: platformio.ini  tone.py
edge-node/: CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.defaults
edge-node/src/: CMakeLists.txt  adc_parse.c  adc_parse.h  adc_read.c  adc_read.h  calibration.c  calibration.h  config.h  excitation.c  excitation.h  fdm_math.c  fdm_math.h  globals.h  main.c  network_task.c  network_task.h  nvs_config.c  nvs_config.h  sensing_task.c  sensing_task.h  sync.c  sync.h  tdm.c  tdm.h
fdm-bench/: CMakeLists.txt  fdm_analysis.py  platformio.ini  plot_fdm.py  plot_fdm_osc.py  sdkconfig.defaults
leds/: README.md  __main__.py  clock.py  color.py  conductor.py  conductor_config.py  config-bench.yaml  config.py  default_config.yaml  default_palettes.yaml  effects.py  mapping.py  osc_input.py  osc_server.py  pad_state.py  palettes.py  program_config.py  sensor_state.py  state_machine.py  wled.py
network/: dhcp-leases.conf  hosts  install.sh  shrine-dhcp-hosts  shrine-dnsmasq.conf  shrine-network.sh
osc-sim/: README.md  generator.py  manual.py  manual_gui.py  monitor.py  test_manual.py
pd/: DESIGN-mode-progression.md  README.md  cap-intensity.pd  cap-trigger.pd  channel-send.pd  clock.pd  drone.pd  drones.pd  heartbeat.pd  main.pd  main2.pd  main3.pd  main4.pd  master.pd  melodic-voice.pd  mode-table.pd  notch.pd  (+20 more)
(+101 files in other folders)
