[project]
name = "shrine"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "matplotlib",
    "numpy",
    "pip",  # uv venvs omit pip; PlatformIO needs it for ESP-IDF setup
    "platformio",
    "scipy",
    "pyserial",
    "python-osc",
    "pyyaml",
    "requests",
    "sounddevice",
    "esptool",
    "esp-idf-nvs-partition-gen"
]

[dependency-groups]
dev = [
    "pytest",
]
