[project]
name = "shrine"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "matplotlib",
    "numpy",
    "pip",  # uv venvs omit pip; PlatformIO needs it for ESP-IDF setup
    "platformio",
    "scipy",
    "pyserial",
    "python-osc",
    "pyyaml",
    "requests",
    "sounddevice",
    "esptool",
    "esp-idf-nvs-partition-gen",
    "watchdog",
]

[dependency-groups]
dev = [
    "pytest",
]
# Optional: the Qt desktop front-end for the manual sensor simulator.
# Install with `uv sync --group gui`; run with
# `uv run --group gui python osc-sim/manual_gui.py`.
gui = [
    "pyside6",
]
