idf_component_register(
    SRCS
        "nvs_config.c"
        "excitation.c"
        "adc_read.c"
        "adc_parse.c"
        "fdm_math.c"
        "sensing_task.c"
        "network_task.c"
        "main.c"
    INCLUDE_DIRS "."
    REQUIRES
        nvs_flash
        driver
        esp_adc
        esp_wifi
        esp_netif
        esp_event
        lwip
        esp_timer
        tinyosc
)
